Working dir for prots and notebook w alignment

--- a/dual_cnn/align_center.ipynb
+++ b/dual_cnn/align_center.ipynb
@@ -2,19 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pymol'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [19]\u001b[0m, in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mimportlib\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpickle\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpymol\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m cmd\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mOR_alignment\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrmsd_functions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pymol'"
-     ]
+     "data": {
+      "text/plain": [
+       "<module 'rmsd_functions' from '/home/users/jvs15/project-protein-fold/dual_cnn/OR_alignment/rmsd_functions.py'>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -26,24 +25,97 @@
     "import plotly.express as px\n",
     "import importlib\n",
     "import pickle\n",
-    "from pymol import cmd\n",
-    "from OR_alignment.rmsd_functions import *"
+    "os.chdir('/home/users/jvs15/project-protein-fold/dual_cnn/OR_alignment')\n",
+    "import rmsd_functions as rmsd\n",
+    "importlib.reload(rmsd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "Aligned_ORs = pd.read_csv('/home/users/jvs15/project-protein-fold/dual_cnn/OR_alignment/OR_sequence_table.csv', index_col=[0])\n",
+    "Aligned_ORs = list(Aligned_ORs.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.7519206349206353, 6.195484126984126, -6.388984126984128]\n"
+     ]
+    }
+   ],
    "source": [
     "# Center Olfr73 on its binding site\n",
     "# Known binding site residues come from https://www.nature.com/articles/s42003-019-0384-8\n",
     "\n",
-    "## TO DO:\n",
-    "# 1) Center Olfr73 on binding site (from literature)\n",
-    "# 2) Use TMalign in PyMol to shift all ORs on top of each other\n",
+    "f = '/home/users/jvs15/project-protein-fold/dual_cnn/OR_alignment/AF_pdb/Olfr73_mOR-EG.pdb'\n",
+    "coord = rmsd.get_coordinates_pdb(f)\n",
     "\n",
+    "atomlist = [102, 105, 106, 109, 181, 182, 199, 203, 208, 259, 260, 273, 277, 280]\n",
+    "xatom = []\n",
+    "yatom = []\n",
+    "zatom = []\n",
+    "for i in range(len(coord[0])):\n",
     "\n",
+    "    if coord[2][i] in atomlist:\n",
+    "        xatom.append(coord[1][i][0])\n",
+    "        yatom.append(coord[1][i][1])\n",
+    "        zatom.append(coord[1][i][2])\n",
+    "geo_center = [np.mean(np.asarray(xatom)), \n",
+    "              np.mean(np.asarray(yatom)), \n",
+    "              np.mean(np.asarray(zatom))]\n",
+    "\n",
+    "print(geo_center)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdb_dir = '/home/users/jvs15/project-protein-fold/dual_cnn/OR_alignment/AF_pdb/Original'\n",
+    "pdb_files = os.listdir(pdb_dir)\n",
+    "pdb_files = [pdb for pdb in pdb_files if \".pdb\" in pdb]\n",
+    "data = {}\n",
+    "for file in pdb_files:\n",
+    "    name = file.split('.')[0]\n",
+    "    for i in name.split('_'): # if there are multiple Olfr names for a single file, take the first 'Olfr' string\n",
+    "        if 'Olfr' in name: \n",
+    "            name = name\n",
+    "            break\n",
+    "    name = name.split('-')[0]\n",
+    "    if not name in Aligned_ORs:\n",
+    "#         print(name + ' NOT added')\n",
+    "        continue\n",
+    "    atom, coord, resid = rmsd.get_coordinates_pdb(f'{pdb_dir}/{file}')\n",
+    "    coord -= rmsd.centroid(coord)\n",
+    "    coord -= geo_center\n",
+    "    data[name] = {}\n",
+    "    data[name][\"atom\"] = atom\n",
+    "    data[name][\"coord\"] = coord\n",
+    "    data[name][\"resid\"] = resid\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle_file = open('existing_symb_to_unip.p', 'rb')\n",
+    "d = pickle.load(pickle_file)\n",
+    "print(d)\n",
     "\n"
    ]
   }
